# iron

./: LICENSE.md  README.md  index.html  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: color_management.rs  color_profile.rs  error.rs  exif_handler.rs  exif_writer.rs  image_decoder.rs  image_processing.rs  mod.rs  models.rs  settings.rs  system_info.rs  task.rs  thumbnail.rs
src/components/: ActionButtons.tsx  EmptyState.tsx  ExifViewer.tsx  FileList.tsx  Footer.tsx  ImagePreview.tsx  LoadingState.tsx  OptimizationHeader.tsx  PersistentDropZone.tsx  PreviewPanel.tsx  ProcessingTable.tsx  ProgressDisplay.tsx  ResultsTable.tsx  SettingsModal.tsx  SettingsPage.tsx  SidePanel.tsx  SuccessMetrics.tsx  TitleBar.tsx
