[package]
name = "iron"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "iron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"  # Aggiungi questa linea
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25.8" }
rayon = "1.11.0"
num_cpus = "1.17.0"
sysinfo = "0.37.1"
webp = "0.3.1"
oxipng = "9.1.5"
png = "0.18.0"
imagequant = "4.4.1"
infer = "0.19.0"
walkdir = "2.5.0"
turbojpeg = "1.3.3"
imagesize = "0.14.0"
